tests/baselines/reference/tsxAttributeErrors.errors.txt
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(14,6): error TS2322: Type '{ text: 42; }' is not assignable to type '{ text?: 文字; width?: 数字; }'.
  Types of property 'text' are incompatible.
    Type '42' is not assignable to type '文字'.
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(17,6): error TS2322: Type '{ width: "foo"; }' is not assignable to type '{ text?: 文字; width?: 数字; }'.
  Types of property 'width' are incompatible.
    Type '"foo"' is not assignable to type '数字'.
tests/cases/conformance/jsx/tsxAttributeErrors.tsx(21,6): error TS2322: Type '{ text: 数字; }' is not assignable to type '{ text?: 文字; width?: 数字; }'.
  Types of property 'text' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/jsx/tsxAttributeErrors.tsx (3 errors) ====
    declare namespace JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		div: {
    			text?: string;
    			width?: number;
    		}
    
    		span: any;
    	}
    }
    
    // Error, number is not assignable to string
    <div text={42} />;
         ~~~~~~~~~
!!! error TS2322: Type '{ text: 42; }' is not assignable to type '{ text?: 文字; width?: 数字; }'.
!!! error TS2322:   Types of property 'text' are incompatible.
!!! error TS2322:     Type '42' is not assignable to type '文字'.
    
    // Error, string is not assignable to number
    <div width={'foo'} />;
         ~~~~~~~~~~~~~
!!! error TS2322: Type '{ width: "foo"; }' is not assignable to type '{ text?: 文字; width?: 数字; }'.
!!! error TS2322:   Types of property 'width' are incompatible.
!!! error TS2322:     Type '"foo"' is not assignable to type '数字'.
    
    // Error, number is not assignable to string
    var attribs = { text: 100 };
    <div {...attribs} />;
         ~~~~~~~~~~~~
!!! error TS2322: Type '{ text: 数字; }' is not assignable to type '{ text?: 文字; width?: 数字; }'.
!!! error TS2322:   Types of property 'text' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    
    // No errors here
    <span foo='bar' bar={'foo'} />;
    